[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "nexinfer"
version = "0.1.0"
description = "A small decoder-only LLM inference library."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NexInfer Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
safetensors = ["safetensors>=0.4"]
transformers = ["transformers>=4.40"]
torch = ["torch>=2.2", "transformers>=4.40", "safetensors>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
